musl/issues/sparsevb.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'sparsevb' ...
** package 'sparsevb' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
using C++11
make[1]: Entering directory '/var/local/PKGS/CRAN/sparsevb/src'
g++ -std=gnu++11 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppEnsmallen/include' -I/usr/local/include   -fopenmp -fpic  -O2 -mtune=native -Wno-ignored-attributes -D__MUSL__   -c RcppExports.cpp -o RcppExports.o
In file included from /home/runner/R-patched/lib/RcppEnsmallen/include/RcppEnsmallen.h:25,
                 from RcppExports.cpp:5:
/home/runner/R-patched/lib/RcppEnsmallen/include/ensmallen.hpp:32:4: error: #error "*** C++14 compiler required; enable C++14 mode in your compiler, or use an earlier version of ensmallen"
   32 |   #error "*** C++14 compiler required; enable C++14 mode in your compiler, or use an earlier version of ensmallen"
      |    ^~~~~
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:204: RcppExports.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/CRAN/sparsevb/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/sparsevb/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/sparsevb/src'
ERROR: compilation failed for package 'sparsevb'
* removing '/home/runner/R-patched/lib/sparsevb'
